Fix flex wrap

--- a/sites/all/themes/mmchoeur/src/scss/_mixins.scss
+++ b/sites/all/themes/mmchoeur/src/scss/_mixins.scss
@@ -10,7 +10,6 @@
 @mixin flexcontainer() {
   @include container();
   display: flex;
-  flex-wrap: wrap;
 }
 %flex-container {
   @include flexcontainer();
