--- a/sites/all/themes/mmchoeur/src/scss/pages/_user.scss
+++ b/sites/all/themes/mmchoeur/src/scss/pages/_user.scss
@@ -34,6 +34,7 @@
     ul {
       list-style-type: none;
       @extend %flex-container;
+      flex-wrap: wrap;
       align-items: baseline;
     }
     li {
